--- a/BMI_Calculator/style.css
+++ b/BMI_Calculator/style.css
@@ -19,8 +19,8 @@ body {
 .container {
     background: rgb(34,193,195);
     background: linear-gradient(138deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    width: 600px;
-    height: 400px;
+    width: 750px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,13 +36,12 @@ h1 {
 
 form {
     margin: 20px 0 20px 0;
-    width: 450px;
+    width: 550px;
     height: 170px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
 }
 
 label {
@@ -71,3 +70,12 @@ input[type="text"]:focus {
     display: flex;
     flex-direction: column;
 }
+
+.btn {
+    font-size: 20px;
+    width: 550px;
+    height: 40px;
+    background-color: lightslategrey;
+}
+
+
