--- a/BMI_Calculator/style.css
+++ b/BMI_Calculator/style.css
@@ -1,84 +1,197 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+@media screen and (min-width: 1000px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Roboto", sans-serif;
+    }
+
+    body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        background-color: azure;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container {
+        background: rgb(34,193,195);
+        background: linear-gradient(138deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+        width: 750px;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid orange;
+        border-radius: 5px;
+    }
+
+    h1 {
+        font-size: 60px;
+        margin: 5px;
+    }
+
+    form {
+        margin: 20px 0 20px 0;
+        width: 550px;
+        height: 170px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    label {
+        margin-top:5px;
+        font-size: 20px;
+    }
+
+    input[type="text"] {
+        width: 100%;
+        height: 40px;
+        margin-top: 5px;
+        border-radius: 4px;
+        transition: all 1s;
+    }
+
+    input[type="text"]:focus {
+        outline: none;
+        border: 2px solid purple;
+        border-radius: 6px;
+        transition: all 1s;
+    } 
+
+    .form-group {
+        height: 80px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .btn {
+        font-size: 20px;
+        width: 550px;
+        height: 40px;
+        background-color: lightslategrey;
+    }
+
+    .result {
+        margin-top: 20px;
+        width: 550px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        opacity: 0;
+        transition: all 1s;
+    }
+
+    .visible {
+        opacity: 1;
+        transition: all 1s;
+    }
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    background-color: azure;
-    justify-content: center;
-    align-items: center;
-}
+@media screen and (max-width: 600px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Roboto", sans-serif;
+    }
 
-.container {
-    background: rgb(34,193,195);
-    background: linear-gradient(138deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    width: 750px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid orange;
-    border-radius: 5px;
-}
+    body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        background-color: darkblue;
+        justify-content: center;
+        align-items: center;
+    }
 
-h1 {
-    font-size: 60px;
-    margin: 5px;
-}
+    .container {
+        background: rgb(34,193,195);
+        background: linear-gradient(138deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+        width: 400px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid orange;
+        border-radius: 5px;
+    }
 
-form {
-    margin: 20px 0 20px 0;
-    width: 550px;
-    height: 170px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
+    h1 {
+        margin-top: 5pxpx;
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
 
-label {
-    margin-top:5px;
-    font-size: 20px;
-}
+    form {
+        margin: 10px 0 10px 0;
+        width: 300px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-input[type="text"] {
-    width: 100%;
-    height: 40px;
-    margin-top: 5px;
-    border-radius: 4px;
-    transition: all 1s;
-}
+    label {
+        margin-top:-5px;
+        font-size: 15px;
+    }
 
-input[type="text"]:focus {
-    outline: none;
-    border: 2px solid purple;
-    border-radius: 6px;
-    transition: all 1s;
-} 
+    input[type="text"] {
+        width: 100%;
+        height: 30px;
+        margin-top: 5px;
+        border-radius: 4px;
+        transition: all 1s;
+    }
 
-.form-group {
-    height: 80px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
+    input[type="text"]:focus {
+        outline: none;
+        border: 2px solid purple;
+        border-radius: 6px;
+        transition: all 1s;
+    } 
 
-.btn {
-    font-size: 20px;
-    width: 550px;
-    height: 40px;
-    background-color: lightslategrey;
-}
+    .form-group {
+        height: 80px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 
-.result {
-    width: 100px;
-    height: 100px;
+    .btn {
+        margin-top: 20px;
+        font-size: 15px;
+        width: 300px;
+        height: 30px;
+        background-color: lightslategrey;
+    }
+
+    .result {
+        margin-top: 10px;
+        width: 300px;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 11px;
+        opacity: 0;
+        transition: all 1s;
+    }
+
+    .visible {
+        opacity: 1;
+        transition: all 1s;
+    }
 }
